--- a/1-data-collection-and-exploration.ipynb
+++ b/1-data-collection-and-exploration.ipynb
@@ -36,7 +36,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1.1. ACRIMA dataset\n",
+    "##### 1.1. ACRIMA dataset [$^{[2]}$](https://figshare.com/s/c2d31f850af14c5b5232)\n",
     "* **Country:** Spain \n",
     "* **No. of patients:** unknown\n",
     "* **No. of images:** 705 \n",
@@ -278,7 +278,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### 1.2. Kaggle cataract detection dataset\n",
+    "##### 1.2. Kaggle cataract detection dataset [$^{[3]}$](https://www.kaggle.com/datasets/jr2ngb/cataractdataset)\n",
     "\n",
     "* **Country:** unknown \n",
     "* **No. of patients:** unknown\n",
