Create utils file for further use & new notebook

--- a/2-data-splitting-and-augmentation.ipynb
+++ b/2-data-splitting-and-augmentation.ipynb
@@ -168,6 +168,13 @@
     "  \n",
     "  return train_generator, val_generator"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "These functions are also saved in `data_functions.py` for use in later notebooks."
+   ]
   }
  ],
  "metadata": {
