Attempt at implementing GridSearchCV

--- a/3-simple-CNN-model.ipynb
+++ b/3-simple-CNN-model.ipynb
@@ -8,7 +8,7 @@
       ],
       "metadata": {
         "id": "IX8ptKk2zVdr",
-        "outputId": "a5557f7e-9b58-41ad-8be5-32058025c167",
+        "outputId": "d18f282c-6e8b-40eb-c020-e28fdf2b83a9",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 11,
+      "execution_count": 3,
       "metadata": {
         "id": "qs9Qmxb_zAbm"
       },
@@ -66,7 +66,7 @@
       "metadata": {
         "id": "Tnk_s47oznbb"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -123,10 +123,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": 54,
       "metadata": {
         "id": "U_rRlYUdzAbu",
-        "outputId": "c671ceaf-9f0f-4b4e-a91a-d0ff35cd17ac",
+        "outputId": "a209b1e6-1655-47a3-c4e4-c8b38f3dcf4b",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 5,
+      "execution_count": 9,
       "metadata": {
         "id": "jX_EAjo_zAbz"
       },
@@ -185,7 +185,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 25,
+      "execution_count": null,
       "metadata": {
         "id": "lnAkj-KszAb1",
         "outputId": "21b636b6-1d12-4c32-90a1-c8a74d1361be",
@@ -273,7 +273,7 @@
           "height": 255
         }
       },
-      "execution_count": 26,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -300,7 +300,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 13,
+      "execution_count": null,
       "metadata": {
         "id": "u6jJeDL2zAb4",
         "outputId": "4c9a9030-72e7-4cdc-9211-d0d72b832bfd",
@@ -391,7 +391,7 @@
           "height": 255
         }
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -418,7 +418,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 22,
+      "execution_count": null,
       "metadata": {
         "id": "heDv3R54zAb7",
         "outputId": "cdaf01ac-ea48-4a6d-82b6-a71c16810458",
@@ -510,7 +510,7 @@
           "height": 255
         }
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -525,6 +525,341 @@
           }
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.2. Hyperparameter tuning\n",
+        "\n",
+        "We'll now try to optimize our two-layer neural network which we'll then test on the Kaggle dataset."
+      ],
+      "metadata": {
+        "id": "eZLW0bwQuGHF"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "import numpy as np\n",
+        "from scikeras.wrappers import KerasClassifier\n",
+        "from sklearn.model_selection import GridSearchCV"
+      ],
+      "metadata": {
+        "id": "VvhgQ6Fh2q2e"
+      },
+      "execution_count": 22,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def create_model():\n",
+        "  two_layer_model = tf.keras.Sequential([\n",
+        "    tf.keras.layers.Conv2D(32, (3, 3), input_shape=input_shape, activation='relu'),\n",
+        "    tf.keras.layers.MaxPool2D(2, 2),\n",
+        "    tf.keras.layers.Conv2D(64, (3, 3), activation='relu'),\n",
+        "    tf.keras.layers.MaxPool2D(2, 2),\n",
+        "    tf.keras.layers.Flatten(),\n",
+        "    tf.keras.layers.Dense(512, activation='relu'),\n",
+        "    tf.keras.layers.Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "  two_layer_model.compile(optimizer=tf.keras.optimizers.RMSprop(learning_rate=0.001),\\\n",
+        "    loss='binary_crossentropy', metrics=['accuracy'])\n",
+        "  \n",
+        "  return two_layer_model"
+      ],
+      "metadata": {
+        "id": "5EvbkHxzC7h_"
+      },
+      "execution_count": 11,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "To use GridSearchCV with our image generators we need to unwrap the augmented images from the generators. To do so, I explored the `train_gen` `keras.preprocessing.image.DirectoryIterator` object."
+      ],
+      "metadata": {
+        "id": "LsWBC6tHFUpb"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"train_gen type:\", type(train_gen))\n",
+        "print(\"train_gen[0] type\", type(train_gen[0]))\n",
+        "print(\"train_gen[0][0] type\", type(train_gen[0][0]))\n",
+        "print(\"train_gen[0][0][0] type\", type(train_gen[0][0][0]))"
+      ],
+      "metadata": {
+        "id": "IC9Eut_kDZ94",
+        "outputId": "757c07aa-20f0-4340-b58c-291b2371af47",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 31,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "train_gen type: <class 'keras.preprocessing.image.DirectoryIterator'>\n",
+            "train_gen[0] type <class 'tuple'>\n",
+            "train_gen[0][0] type <class 'numpy.ndarray'>\n",
+            "train_gen[0][0][0] type <class 'numpy.ndarray'>\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"train_gen length:\", len(train_gen))\n",
+        "print(\"train_gen[0] length\", len(train_gen[0]))\n",
+        "print(\"train_gen[0][0] shape\", train_gen[0][0].shape)\n",
+        "print(\"train_gen[0][0][0] shape\", train_gen[0][0][0].shape)"
+      ],
+      "metadata": {
+        "id": "EKn1rj9cGEfr",
+        "outputId": "2f738b81-b02f-49b5-e22e-b4f5aabcccba",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 33,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "train_gen length: 29\n",
+            "train_gen[0] length 2\n",
+            "train_gen[0][0] shape (20, 178, 178, 3)\n",
+            "train_gen[0][0][0] shape (178, 178, 3)\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "We notice that each element in the `train_gen`corresponds to the number of samples in a batch. Then, the elements in the `train_gen[x]` tuples are the batches of augmented images for each class, **glaucoma** & **normal**. Therefore, we need to iterate through each batch and class to get the input augmented images and their label for `GridSearchCV`."
+      ],
+      "metadata": {
+        "id": "EmMZiSHsHOZu"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def extract_images(generator, classes=[\"0\", \"1\"]):\n",
+        "\n",
+        "  no_of_batches = len(generator)\n",
+        "  no_of_classes = len(generator[0])\n",
+        "  no_of_samples = generator[0][0].shape[0]\n",
+        "  no_of_examples = no_of_batches * no_of_classes * no_of_samples\n",
+        "\n",
+        "  X_shape = input_shape \n",
+        "  y_shape = 1\n",
+        "\n",
+        "  X = np.empty(X_shape)\n",
+        "  y = np.empty(y_shape)\n",
+        "\n",
+        "  for batch in generator:\n",
+        "    print(len(batch))\n",
+        "    for i, a_class in enumerate(batch):\n",
+        "      print(i)\n",
+        "      print(a_class.shape)\n",
+        "      for image in a_class:\n",
+        "        print(image.shape)\n",
+        "        X = np.vstack([X, image])\n",
+        "        y = np.vstack([y, classes[i]])\n",
+        "\n",
+        "  return X, y"
+      ],
+      "metadata": {
+        "id": "5zm6ZJMjJbdA"
+      },
+      "execution_count": 49,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Figure out which class is 0 and which is 1\n",
+        "train_gen.class_indices"
+      ],
+      "metadata": {
+        "id": "giYtsI1nNqAd",
+        "outputId": "79e2e403-ae88-44e9-f1d7-d772fb4eacf6",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "{'glaucoma': 0, 'normal': 1}"
+            ]
+          },
+          "metadata": {},
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "classes = [\"glaucoma\", \"normal\"]\n",
+        "\n",
+        "X_train, y_train = extract_images(train_gen, classes)\n",
+        "X_val, y_val = extract_images(val_gen, classes)"
+      ],
+      "metadata": {
+        "id": "hdXdyswmNigJ",
+        "outputId": "b0ba0902-45f6-4ba1-b2eb-a9a5bf8d26e6",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 940
+        }
+      },
+      "execution_count": 50,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "2\n",
+            "0\n",
+            "(20, 178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "(178, 178, 3)\n",
+            "1\n",
+            "(20,)\n",
+            "()\n"
+          ]
+        },
+        {
+          "output_type": "error",
+          "ename": "ValueError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-50-cfcc0e8435a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mclasses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"glaucoma\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"normal\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_gen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_gen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<ipython-input-49-06d68c335471>\u001b[0m in \u001b[0;36mextract_images\u001b[0;34m(generator, classes)\u001b[0m\n\u001b[1;32m     19\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0mimage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma_class\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    280\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m         \u001b[0marrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 282\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    283\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
+            "\u001b[0;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 3 dimension(s) and the array at index 1 has 2 dimension(s)"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "X = np.vstack([X_train, X_val])\n",
+        "y = np.vstack([y_train, y_val])"
+      ],
+      "metadata": {
+        "id": "jYnP13UBOplS"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Fix random seed for reproducibility\n",
+        "seed = 7\n",
+        "tf.random.set_seed(seed)\n",
+        "\n",
+        "# Define the grid search parameters\n",
+        "batch_size = [10, 20, 40, 60, 80, 100]\n",
+        "epochs = [10, 20, 30, 40, 50]\n",
+        "param_grid = dict(batch_size=batch_size, epochs=epochs)\n",
+        "grid = GridSearchCV(estimator=create_model(), param_grid=param_grid, n_jobs=-1, cv=3)\n",
+        "grid_result = grid.fit(X, y)\n",
+        "\n",
+        "# Summarize results\n",
+        "print(\"Best: %f using %s\" % (grid_result.best_score_, grid_result.best_params_))\n",
+        "means = grid_result.cv_results_['mean_test_score']\n",
+        "stds = grid_result.cv_results_['std_test_score']\n",
+        "params = grid_result.cv_results_['params']\n",
+        "for mean, stdev, param in zip(means, stds, params):\n",
+        "    print(\"%f (%f) with: %r\" % (mean, stdev, param))\n"
+      ],
+      "metadata": {
+        "id": "GANntdCVMfL8"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "#### 3.2.1. Batch size & number of epochs"
+      ],
+      "metadata": {
+        "id": "n8DQ6CR12j03"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "TTmIDeOa2iEC"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        ""
+      ],
+      "metadata": {
+        "id": "eFx68lkc1ynp"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "### 3.3. Model evaluation\n",
+        "\n",
+        "We'll evaluate the final neural network on the Kaggle dataset."
+      ],
+      "metadata": {
+        "id": "S4AY9e_S1ko_"
+      }
     }
   ],
   "metadata": {
