Fix image extraction from ImageDataGenerator

--- a/3-simple-CNN-model.ipynb
+++ b/3-simple-CNN-model.ipynb
@@ -8,7 +8,7 @@
       ],
       "metadata": {
         "id": "IX8ptKk2zVdr",
-        "outputId": "d18f282c-6e8b-40eb-c020-e28fdf2b83a9",
+        "outputId": "636e6a53-93c8-4743-be9c-35148684a5f8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -19,7 +19,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Mounted at /content/drive\n"
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n"
           ]
         }
       ]
@@ -37,7 +37,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 3,
+      "execution_count": 2,
       "metadata": {
         "id": "qs9Qmxb_zAbm"
       },
@@ -123,10 +123,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 54,
+      "execution_count": 5,
       "metadata": {
         "id": "U_rRlYUdzAbu",
-        "outputId": "a209b1e6-1655-47a3-c4e4-c8b38f3dcf4b",
+        "outputId": "c5e14c08-37e7-4fba-a37a-9a2a59980d95",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -165,7 +165,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 9,
+      "execution_count": 6,
       "metadata": {
         "id": "jX_EAjo_zAbz"
       },
@@ -541,13 +541,14 @@
       "cell_type": "code",
       "source": [
         "import numpy as np\n",
+        "from tqdm import tqdm\n",
         "from scikeras.wrappers import KerasClassifier\n",
         "from sklearn.model_selection import GridSearchCV"
       ],
       "metadata": {
         "id": "VvhgQ6Fh2q2e"
       },
-      "execution_count": 22,
+      "execution_count": 7,
       "outputs": []
     },
     {
@@ -572,7 +573,7 @@
       "metadata": {
         "id": "5EvbkHxzC7h_"
       },
-      "execution_count": 11,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -599,7 +600,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -628,7 +629,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 33,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -645,7 +646,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "We notice that each element in the `train_gen`corresponds to the number of samples in a batch. Then, the elements in the `train_gen[x]` tuples are the batches of augmented images for each class, **glaucoma** & **normal**. Therefore, we need to iterate through each batch and class to get the input augmented images and their label for `GridSearchCV`."
+        "We notice that each element in the `train_gen`corresponds to an image batch. Then, the elements in the `train_gen[x]` tuples contain each image and label within the batch. Therefore, we need to iterate through each sample to get the input augmented images and their label for `GridSearchCV`."
       ],
       "metadata": {
         "id": "EmMZiSHsHOZu"
@@ -654,35 +655,32 @@
     {
       "cell_type": "code",
       "source": [
-        "def extract_images(generator, classes=[\"0\", \"1\"]):\n",
+        "def extract_images(generator, classes={0: \"0\", 1:\"1\"}):\n",
         "\n",
         "  no_of_batches = len(generator)\n",
-        "  no_of_classes = len(generator[0])\n",
-        "  no_of_samples = generator[0][0].shape[0]\n",
-        "  no_of_examples = no_of_batches * no_of_classes * no_of_samples\n",
+        "  no_of_classes = len(classes)\n",
+        "  batch_size = generator[0][0].shape[0]\n",
+        "  no_of_examples = no_of_batches * no_of_classes * batch_size\n",
         "\n",
-        "  X_shape = input_shape \n",
-        "  y_shape = 1\n",
+        "  X = []\n",
+        "  y = []\n",
         "\n",
-        "  X = np.empty(X_shape)\n",
-        "  y = np.empty(y_shape)\n",
+        "  for no_batch, batch in tqdm(enumerate(generator)):\n",
         "\n",
-        "  for batch in generator:\n",
-        "    print(len(batch))\n",
-        "    for i, a_class in enumerate(batch):\n",
-        "      print(i)\n",
-        "      print(a_class.shape)\n",
-        "      for image in a_class:\n",
-        "        print(image.shape)\n",
-        "        X = np.vstack([X, image])\n",
-        "        y = np.vstack([y, classes[i]])\n",
+        "    # Ensure iteration doesn't run indefinitely, it's a keras issue\n",
+        "    if no_batch > (no_of_batches - 1):\n",
+        "      break\n",
+        "\n",
+        "    for (image, label) in zip(batch[0], batch[1]):\n",
+        "      X.append(image)\n",
+        "      y.append(classes[label])\n",
         "\n",
         "  return X, y"
       ],
       "metadata": {
         "id": "5zm6ZJMjJbdA"
       },
-      "execution_count": 49,
+      "execution_count": 22,
       "outputs": []
     },
     {
@@ -698,7 +696,7 @@
           "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 36,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -715,66 +713,26 @@
     {
       "cell_type": "code",
       "source": [
-        "classes = [\"glaucoma\", \"normal\"]\n",
+        "classes = {0: \"glaucoma\", 1: \"normal\"}\n",
         "\n",
         "X_train, y_train = extract_images(train_gen, classes)\n",
         "X_val, y_val = extract_images(val_gen, classes)"
       ],
       "metadata": {
         "id": "hdXdyswmNigJ",
-        "outputId": "b0ba0902-45f6-4ba1-b2eb-a9a5bf8d26e6",
+        "outputId": "63ae6ec8-b3c3-468c-f2e5-0da04e8f9343",
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 940
+          "base_uri": "https://localhost:8080/"
         }
       },
-      "execution_count": 50,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stdout",
+          "name": "stderr",
           "text": [
-            "2\n",
-            "0\n",
-            "(20, 178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "(178, 178, 3)\n",
-            "1\n",
-            "(20,)\n",
-            "()\n"
-          ]
-        },
-        {
-          "output_type": "error",
-          "ename": "ValueError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-            "\u001b[0;32m<ipython-input-50-cfcc0e8435a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0mclasses\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;34m\"glaucoma\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m\"normal\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mX_train\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_train\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtrain_gen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      4\u001b[0m \u001b[0mX_val\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my_val\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mextract_images\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mval_gen\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<ipython-input-49-06d68c335471>\u001b[0m in \u001b[0;36mextract_images\u001b[0;34m(generator, classes)\u001b[0m\n\u001b[1;32m     19\u001b[0m       \u001b[0;32mfor\u001b[0m \u001b[0mimage\u001b[0m \u001b[0;32min\u001b[0m \u001b[0ma_class\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     20\u001b[0m         \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mimage\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 21\u001b[0;31m         \u001b[0mX\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mimage\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     22\u001b[0m         \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mvstack\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclasses\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     23\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-            "\u001b[0;32m/usr/local/lib/python3.7/dist-packages/numpy/core/shape_base.py\u001b[0m in \u001b[0;36mvstack\u001b[0;34m(tup)\u001b[0m\n\u001b[1;32m    280\u001b[0m     \u001b[0;32mif\u001b[0m \u001b[0;32mnot\u001b[0m \u001b[0misinstance\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mlist\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    281\u001b[0m         \u001b[0marrs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 282\u001b[0;31m     \u001b[0;32mreturn\u001b[0m \u001b[0m_nx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mconcatenate\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0marrs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    283\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    284\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
-            "\u001b[0;32m<__array_function__ internals>\u001b[0m in \u001b[0;36mconcatenate\u001b[0;34m(*args, **kwargs)\u001b[0m\n",
-            "\u001b[0;31mValueError\u001b[0m: all the input arrays must have same number of dimensions, but the array at index 0 has 3 dimension(s) and the array at index 1 has 2 dimension(s)"
+            "29it [00:04,  6.30it/s]\n",
+            "8it [00:01,  6.17it/s]\n"
           ]
         }
       ]
@@ -782,19 +740,41 @@
     {
       "cell_type": "code",
       "source": [
-        "X = np.vstack([X_train, X_val])\n",
-        "y = np.vstack([y_train, y_val])"
+        "# Group all training data together\n",
+        "X = X_train + X_val\n",
+        "y = y_train + y_val\n",
+        "\n",
+        "# Ensure we have the correct format and number of samples\n",
+        "print(len(X))\n",
+        "print(X[0].shape)\n",
+        "print(len(y))\n",
+        "print(y[0])"
       ],
       "metadata": {
-        "id": "jYnP13UBOplS"
+        "id": "jYnP13UBOplS",
+        "outputId": "5ff1cdb5-fb8b-4e73-98ea-7593b2002baf",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 24,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "705\n",
+            "(178, 178, 3)\n",
+            "705\n",
+            "glaucoma\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
       "source": [
-        "# Fix random seed for reproducibility\n",
+        "# Choose a random seed for reproducibility\n",
         "seed = 7\n",
         "tf.random.set_seed(seed)\n",
         "\n",
